site/src/styles/fonts.css
.Article-Title-Style {
  font-family: Open Sans;
  font-size: 24px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: -0.5px;
}
.purple-text-colour {
  color: rgb(144, 32, 130);
}
.blue-text-colour {
  color: rgb(60, 56, 142);
}
.teal-text-colour {
  color: rgb(0, 163, 166);
}
.Notification-heading-Style {
  font-family: Open Sans;
  font-size: 18px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.33;
  letter-spacing: -0.2px;
  color: rgb(0, 0, 0);
}
.Article-sub-title-Style {
  font-family: Open Sans;
  font-size: 16px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.6;
  letter-spacing: -0.2px;
  color: rgb(0, 0, 0);
}
.Button-heading-Style {
  font-family: Open Sans;
  font-size: 16px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.3;
  letter-spacing: -0.2px;
  text-align: center;
}
.Card-heading-Style {
  font-family: Open Sans;
  font-size: 16px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.3;
  letter-spacing: -0.2px;
  color: rgb(0, 0, 0);
}
.Card-heading-Style-white {
  font-family: Open Sans;
  font-size: 16px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.3;
  letter-spacing: -0.2px;
  color: rgb(255, 255, 255);
}
.Confirmation-text-style {
  font-family: Open Sans;
  font-size: 16px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.13;
  letter-spacing: normal;
  color: rgb(48, 48, 48);
}
.Header-Title-Style {
  font-family: Open Sans;
  font-size: 16px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: -0.3px;
  color: rgb(255, 255, 255);
}
.Menu-major-item-Style {
  font-family: Open Sans;
  font-size: 16px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1;
  letter-spacing: -0.2px;
  color: rgb(255, 255, 255);
}
.Menu-minor-item-Style {
  font-family: Open Sans;
  font-size: 16px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: -0.2px;
  color: rgb(255, 255, 255);
}
.Stripe-Heading-Style {
  font-family: Open Sans;
  font-size: 16px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.3;
  letter-spacing: -0.2px;
  text-align: center;
  color: rgb(0, 0, 0);
}
.Article-body-Style {
  font-family: Open Sans;
  font-size: 16px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.6;
  letter-spacing: -0.2px;
  color: rgb(0, 0, 0);
}
.Header-button-Style {
  font-family: Open Sans;
  font-size: 14px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: center;
  color: rgb(255, 255, 255);
}
.Section-heading-Style {
  font-family: Open Sans;
  font-size: 13px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #878787;
}
.Tablist-heading-Style {
  font-family: Open Sans;
  font-size: 14px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #727272;
}
.Article-meta-content-Style {
  font-family: Open Sans;
  font-size: 13px;
  font-weight: normal;
  font-style: italic;
  font-stretch: normal;
  line-height: 1.08;
  letter-spacing: normal;
  color: #6e6e6e;
}
.Card-meta-Style {
  font-family: Open Sans;
  font-size: 13px;
  font-weight: normal;
  font-style: italic;
  font-stretch: normal;
  line-height: 1.08;
  letter-spacing: normal;
  text-align: right;
  color: #6e6e6e;
}
.Button-subhead-Style {
  font-family: Open Sans;
  font-size: 13px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.08;
  letter-spacing: normal;
  color: #6e6e6e;
}
.Card-sub-head-Style-white {
  font-family: Open Sans;
  font-size: 13px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.08;
  letter-spacing: normal;
  color: rgba(255, 255, 255, 0.8);
}
.Card-sub-head-Style-gray {
  font-family: Open Sans;
  font-size: 13px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.08;
  letter-spacing: normal;
  color: #6e6e6e;
}
.Footer-Style {
  font-family: Open Sans;
  font-size: 13px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.08;
  letter-spacing: normal;
  text-align: center;
  color: #676767;
}
.Notification-body-Style {
  font-family: Open Sans;
  font-size: 13px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.69;
  letter-spacing: -0.1px;
  color: rgb(0, 0, 0);
}

